--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,9 +1,11 @@
 {
-  "name": "reactjs-official-tut",
+  "name": "todoapp-react-drf",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://m6code.github.io/todoapp-react-drf-frontend/",
   "dependencies": {
     "cra-template": "1.0.3",
+    "gh-pages": "^2.2.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1"
@@ -12,7 +14,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
